feat: Implementa cálculo de médias para monitoramento de temperatura e clock
Este commit adiciona a funcionalidade de calcular a média da temperatura e do clock do device. As médias são calculadas a partir dos dados coletados periodicamente e exibidas no front-end.

- Adiciona acumuladores e contadores de amostras para temperatura e clock no script.js.
- Implementa a função `mediaTempClock` para calcular e exibir as médias no front-end.
- Atualiza o evento do botão principal para iniciar/parar a coleta de dados e exibir as médias calculadas.

--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,10 @@
     <div class="container-fluid">
         <h1 id="deviceHeader">Carregando informações do dispositivo...</h1>
         <p id="temperatura"></p>
+        <p id="temperaturaMedia"></p>
         <canvas id="temperatureChart"></canvas>
         <p id="clock"></p>
+        <p id="clockMedia"></p>
         <canvas id="clockChart"></canvas>
         <div class="iniciar-button">
             <button id="btnIniciar" type="button" class="btn btn-success" style="width: 180px;">Iniciar</button>
